# TCP-Client-Server-GUI

./: CMakeLists.txt  README.md  TcpServer.h  client.cpp  client.h  client.ui  main.cpp  server.cpp  server.h  server.ui  tcpclient  tcpclient.cpp  tcpclient.h  tcpserver.cpp
